--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-HOLA A TODOS
+<index class="html"></index>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../06-cronometro/css/style.css" />
+    <title>Plantilla</title>
+  </head>
+  <body>
+   <img src="https://cdn.pixabay.com/photo/2016/02/10/21/59/landscape-1192669_1280.jpg" alt="paisaje" />
+  </body>
+</html>
